--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <table cellspacing="30">
     <tr>
-      <td><img src="images/me.png" alt="Shreyash's Profile Picture" width="220" height="220"></td>
+      <td><img src="me.png" alt="Shreyash's Profile Picture" width="220" height="220"></td>
       <td>
         <h1><strong>Shreyash Singh</strong></h1>
         <p><em>Sophomore, <strong><a href="https://www.bits-pilani.ac.in/pilani/">BITS Pilani</a></strong>.</em></p>
