--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <hr size="3" noshade>
   <h3>Education</h3>
   <ul>
-    <li><a href="https://www.bits-pilani.ac.in/pilani/biologicalScience/DepartmentofBiologicalScience/">MS Biological Sciences, BITS Pilani</a></li>
+    <li><a href="https://www.bits-pilani.ac.in/pilani/biologicalScience/DepartmentofBiologicalScience/">M.Sc Biological Sciences, BITS Pilani</a></li>
     <li>12<sup>th</sup> Class, <a href="http://www.centralacademyalwar.in/">Central Academy</a></li>
     <li>10<sup>th</sup> Class, <a href="http://www.anselmsalwar.in/">St. Anselm's School</a></li>
   </ul>
@@ -53,7 +53,7 @@
   <h3>My Hobbies</h3>
 
   <ol>
-    <li>Playing Football, Cricket, Badminton, Table Tennis.</li>
+    <li>Playing Football , Table Tennis.</li>
     <li>Listenting to Music.</li>
   </ol>
   <hr size="3" noshade>
