--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </tr>
       <tr>
         <td>2020-2025</td>
-        <td> B.Tech + MS , BITS Pilani</td>
+        <td> B.Tech + M.Sc. , BITS Pilani</td>
       </tr>
       <tr>
         <td>2019</td>
